--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ psycopg2-binary = "==2.9.3"
 djangorestframework = "==3.13.1"
 django-cors-headers = "==3.11.0"
 django-filter = "==2.4.0"
-django-rest-swagger = "==2.2.0"
+drf-yasg = "==1.20.0"
 python-decouple = "==3.5"
 tzdata = "==2021.5"
 
